# Nepali-OCR

./: .gitignore  README.md  datasets.txt
cpp/: CMakeLists.txt
cpp/include/: extractLines.h  extractWords.h  thin.h
cpp/src/: extractLines.cpp  extractWords.cpp  main.cpp  thin.cpp
demoapp/: settings.gradle
demoapp/app/: build.gradle
demoapp/app/src/androidTest/java/com/suyog/nepaliocr/: ExampleInstrumentedTest.java
demoapp/app/src/main/: AndroidManifest.xml
demoapp/app/src/main/cpp/: native-lib.cpp
demoapp/app/src/main/java/com/suyog/nepaliocr/: CameraPreview.java  MainActivity.java
demoapp/app/src/main/res/drawable/: cam_button.xml
demoapp/app/src/main/res/layout/: activity_main.xml
demoapp/app/src/main/res/values/: strings.xml
demoapp/app/src/test/java/com/suyog/nepaliocr/: ExampleUnitTest.java
demoapp/gradle/wrapper/: gradle-wrapper.properties
